--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <!--- -------------------------------------- COUNTER NUMBER ---------------------------- -->
-    <label id="LabelText" class="label">0</label>
-    <div class="divB">
-        <button id="decrease" class="B">Decrease</button>
-        <button id="reset" class="B"> Reset </button>
-        <button id="increase" class="B">Increase</button>
-    </div> 
+    <form >
+        <h1 class="h1"> Temperature conversion:</h1><br>
+        <input type="number" id="textBox" class="textBox" value="0"><br><br>
+        <input type="radio" name="unit" id="fah">
+        <label for="fah" class="label"> Celsius to Fahrenheit </label><br>
+        <input type="radio" name="unit" id="cel">
+        <label for="fah" class="label"> Fahrenheit to Celsius </label><br> 
+        <button  type="button" class="submit" onclick="convert()">Submit</button><br>
+        <p id="result"></p>
+    </form>
     <script src="index.js"></script>
 
 </body>
