--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <form >
-        <h1 class="h1"> Temperature conversion:</h1><br>
-        <input type="number" id="textBox" class="textBox" value="0"><br><br>
-        <input type="radio" name="unit" id="fah">
-        <label for="fah" class="label"> Celsius to Fahrenheit </label><br>
-        <input type="radio" name="unit" id="cel">
-        <label for="fah" class="label"> Fahrenheit to Celsius </label><br> 
-        <button  type="button" class="submit" onclick="convert()">Submit</button><br>
-        <p id="result"></p>
-    </form>
+    <form  class="form">
+        <div id="container">
+            <h1>Dice Roller</h1><br>
+           <label class="label"># of dice:</label>
+           <input type="number" id="numOfdice" value="1" min="1">
+           <button type="button" onclick="diceGame()">Roll Dice</button>
+           <div id="DiceResult"></div>
+           <div id="DiceImages"></div>
+        
+        </div>
+        </form>
     <script src="index.js"></script>
 
 </body>
